--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "mon": "nodemon index"
+    "mon": "nodemon index",
+    "sass": "node-sass scss -o css --watch"
   },
   "repository": {
     "type": "git",
