--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "mon": "nodemon index",
-    "sass": "node-sass scss -o css --watch"
+    "sass": "node-sass scss -o css --watch",
+    "com": "git commit -m"
   },
   "repository": {
     "type": "git",
