--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "ejs": "^3.0.1",
     "express": "^4.17.1",
+    "fs": "0.0.1-security",
     "mongoose": "^5.9.2",
     "node-sass-middleware": "^0.11.0"
   },
