--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "mon": "nodemon index",
-    "sass": "node-sass scss -o css --watch"
+    "start": "node-sass scss -o public --w"
   },
   "repository": {
     "type": "git",
@@ -22,11 +22,14 @@
   },
   "homepage": "https://github.com/lindacool/Webbshop-GECKO#readme",
   "dependencies": {
+    "css": "^2.2.4",
     "ejs": "^3.0.1",
     "express": "^4.17.1",
     "fs": "0.0.1-security",
     "mongoose": "^5.9.2",
-    "node-sass-middleware": "^0.11.0"
+    "node-sass": "^4.13.1",
+    "node-sass-middleware": "^0.11.0",
+    "scss": "^0.2.4"
   },
   "devDependencies": {
     "chai": "^4.2.0",
