--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "ejs": "^3.0.1",
     "express": "^4.17.1",
     "fs": "0.0.1-security",
+    "joi": "^14.3.1",
     "mongoose": "^5.9.2",
     "node-sass": "^4.13.1",
     "scss": "^0.2.4"
