--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "homepage": "https://github.com/lindacool/Webbshop-GECKO#readme",
   "dependencies": {
     "bcrypt": "^4.0.1",
+    "bcryptjs": "^2.4.3",
     "css": "^2.2.4",
     "ejs": "^3.0.1",
     "express": "^4.17.1",
