--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "fs": "0.0.1-security",
     "joi": "^14.3.1",
     "jquery": "^3.4.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.2",
     "node-sass": "^4.13.1",
     "scss": "^0.2.4"
