--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.2",
     "node-sass": "^4.13.1",
+    "nodemailer": "^6.4.5",
+    "nodemailer-sendgrid-transport": "^0.2.0",
     "scss": "^0.2.4"
   },
   "devDependencies": {
