--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "bcryptjs": "^2.4.3",
     "c": "^0.1.0",
     "cookie-parser": "^1.4.4",
+    "crypto": "^1.0.1",
     "css": "^2.2.4",
     "ejs": "^3.0.1",
     "express": "^4.17.1",
