--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "scripts": {
     "test": "mocha",
+    "cypress:open": "cypress open",
     "mon": "nodemon index",
     "start": "node-sass scss -o public --w"
   },
@@ -42,7 +43,7 @@
   },
   "devDependencies": {
     "chai": "^4.2.0",
-    "cypress": "^4.0.2",
+    "cypress": "^4.2.0",
     "mocha": "^7.1.1",
     "node-sass-middleware": "^0.11.0",
     "nodemon": "^2.0.2",
